# clickedu-downloader

./: .gitignore  AGENTS.md  README.md  pyproject.toml  ruff.json  tests.json
.github/workflows/: ci.yml
badges/: pylint.json  tests.json
src/clickedu_downloader/: __init__.py  __main__.py  downloader.py
tests/: test_downloader.py
