[project]
name = "clickedu-downloader"
version = "0.1.0"
description = "Download all photo albums from Clickedu school platforms"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "curl-cffi>=0.15.0",
    "piexif>=1.1.3",
    "rich>=15.0.0",
]

[project.scripts]
clickedu-downloader = "clickedu_downloader.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM"]
