[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clickedu_downloader"]

[project]
name = "clickedu-downloader"
version = "0.1.0"
description = "Download all photo albums from Clickedu school platforms"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "curl-cffi>=0.15.0",
    "piexif>=1.1.3",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.0",
]

[project.scripts]
clickedu-downloader = "clickedu_downloader.__main__:main"

[dependency-groups]
dev = [
    "pylint>=4.0.6",
    "pytest>=8.4.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM", "LOG"]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
